fixing up spacing

--- a/assets/css/style_dark.css
+++ b/assets/css/style_dark.css
@@ -283,9 +283,9 @@ table td { border: 1px solid #404040; }
 
 .post-content { margin-bottom: 30px; }
 
-.post-content h1, .post-content h2, .post-content h3 { margin-top: 60px; }
+.post-content h1 { margin-top: 60px; }
 
-.post-content h4, .post-content h5, .post-content h6 { margin-top: 30px; }
+.post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 { margin-top: 30px; }
 
 .post-content h2 { font-size: 1.75rem; }
 
